# Copyright (C) 2023 Shenzhen Kaihong DID Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/soc/unisoc/p7885/hardware/omx_il/sprd_omx.gni")
import("//device/soc/unisoc/p7885/soc_common.gni")

ohos_shared_library("libomx_memion") {
  sources = [
    "C2UnisocDmaBuffer.cpp",
    "VideoMemAllocator.cpp",
  ]

  include_dirs = openmax_include_dirs

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
  ]

  external_deps = [ 
  "hilog:libhilog",
  "c_utils:utils",
  ]
  install_enable = true
  innerapi_tags = [ "passthrough_indirect" ]
  install_images = [chipset_base_dir ]
  subsystem_name = "${SUBSYSTEM_NAME}"
  part_name = "${PART_NAME}"
}
