# Copyright 2023 Shenzhen Kaihong DID Co., Ltd..
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#       http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

import("//build/ohos.gni")
import("../../../../unisoc_wrapper.gni")

group ("common-impl") {
    deps = [
        "1.0:common1.0",
        "1.1:common1.1",
        "1.2:common1.2",
        "aidl/android/hardware/graphics/common:common-V3-ndk"
    ]
}
