# Copyright 2023 Shenzhen Kaihong DID Co., Ltd..
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#       http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

import("//build/ohos.gni")
import("../../../../../unisoc_wrapper.gni")

ohos_prebuilt_shared_library("allocator2.0"){
    source = "lib64/liballocator2.0.z.so"

    install_enable = true
    install_images = [ chipset_base_dir ]
    part_name = "${PART_NAME}"
    subsystem_name = "${SUBSYSTEM_NAME}"
}

ohos_prebuilt_shared_library("allocator_passthrough2.0"){
    source = "lib64/liballocator_passthrough2.0.z.so"

    relative_install_dir = "hw"
    #output_name = "android.hardware.graphics.allocator@2.0-impl.so"
    symlink_target_name = [ "android.hardware.graphics.allocator@2.0-impl.so" ]

    install_enable = true
    install_images = [ chipset_base_dir ]
    subsystem_name = "${SUBSYSTEM_NAME}"
    part_name = "${PART_NAME}"
}